Np 47035 move simple adapter logic to model classes (#387)
* np-47035: moved adapter logic to model for contact info

* np-47035: changed cristin contact info to record

* np-47035: refactor to and from external source